Fixed table overflow; fixed toFixed bug for rating; added week columns to standings page

--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,10 @@ th,td {
   justify-content: center;
 }
 
+.centered-content-inner {
+  width: 100%;
+}
+
 .centered-text {
   text-align: center;
 }
